--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -1,1 +1,271 @@
-<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN""http://collabnet.com/dtds/collabnet_transitional_10.dtd"><html> <head>  <title>Queue List / Search Results (2.6.0.x)</title>  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" /> </head> <body>  <form action="#" method="get">   <div id="globalnav">    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>   </div>   <table border="0" cellspacing="0" cellpadding="0" width="95%">    <tr>     <td width="100" id="leftcol">      <div id="projnav">       <a href="#">projectnav</a>        <ul>        <li><a href="#">item1</a></li>        <li><a href="#">item2</a></li>       </ul>       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>      </div>     </td>     <td id="bodycol">      <div id="featurenav">       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>      </div>      <div id="div2-6-0" class="app">       <h2>Queue List / Search Results (2.6.0.x)</h2>       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>       <p>&#171; previous | 1 of 1 | next&#187; (<a href="#">add/remove attributes from view</a>)</p><table cellpadding="0" cellspacing="1" border="0" width="100%"><tr><td bgcolor="#999999"><table cellpadding="2" cellspacing="1" border="0"><tr><td bgcolor="#006600"><font face="verdana" color="ffffff"><small><small>save</small><small></font><br><input type="submit" value="query"></td><td bgcolor="#000066"><font face="verdana" color="ffffff"><small><small>verbose view</small><small></font><br><input type="submit" value="selected">&nbsp;<input type="submit" value="all"></td><td bgcolor="#0099FF"><font face="verdana" color="ffffff"><small><small>reassign</small><small></font><br><input type="submit" value="selected">&nbsp;<input type="submit" value="all"></td></tr></table></td></tr></table>       <h3>Search Results</h3>       <table width="100%" border="1" cellspacing="2" cellpadding="3">        <tr>         <th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>         <th><a href="#" title="sort">issue ID #123:</a></th>         <th><a href="#" title="sort">issue summary:</a></th>         <th><a href="#" title="sort">attribute name:</a></th>         <th><a href="#" title="sort">attribute x:</a></th>        </tr>        <tr class="a">         <td><input type="checkbox" /></td>         <td><a href="#"><strong>23</strong></a></td>         <td><a href="#">is broken</a></td>         <td>busted</td>         <td>priority 1</td>        </tr>        <tr class="b">         <td><input type="checkbox" /></td>         <td><a href="#"><strong>22</strong></a></td>         <td><a href="#">reported fixed</a></td>         <td>busted</td>         <td>priority 1</td>        </tr>        <tr class="a">         <td><input type="checkbox" /></td>         <td><a href="#"><strong>28</strong></a></td>         <td><a href="#">is broken</a></td>         <td>busted</td>         <td>priority 1</td>        </tr>        <tr class="b">         <td><input type="checkbox" /></td>         <td><a href="#"><strong>29</strong></a></td>         <td><a href="#">is broken</a></td>         <td>busted</td>         <td>priority 1</td>        </tr>       </table><p>	   <table cellpadding="0" cellspacing="1" border="0" width="100%"><tr><td bgcolor="#999999"><table cellpadding="2" cellspacing="1" border="0"><tr><td bgcolor="#006600"><font face="verdana" color="ffffff"><small><small>save</small><small></font><br><input type="submit" value="query"></td><td bgcolor="#000066"><font face="verdana" color="ffffff"><small><small>verbose view</small><small></font><br><input type="submit" value="selected">&nbsp;<input type="submit" value="all"></td><td bgcolor="#0099FF"><font face="verdana" color="ffffff"><small><small>reassign</small><small></font><br><input type="submit" value="selected">&nbsp;<input type="submit" value="all"></td></tr></table></td></tr></table></p>       <p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>       <p>&#171; previous | 1 of 1 | next&#187; (<a href="#">add/remove attributes from view</a>)</p>      </div>     </td>    </tr>   </table>  </form> </body></html>
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
+"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
+<html>
+
+<head>
+	<title>Queue List / Search Results (2.6.0.x)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
+
+<body>
+<form action="#" method="get">
+
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
+
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app">
+		
+		<h2>Queue List / Search Results (2.6.0.x)</h2>
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
+		
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<th>Query</th>
+			<td><a href="#" title="view advanced query information">Avanced query</a></td>
+			<td><a href="#" title="view custom query information">Custom</a></td>
+			<td><a href="#" title="view saved queries">Saved queries</a></td>
+			</tr>
+			</table>
+		</div>
+		
+		<p>&#171; previous | 1 of 1 | next &#187; (<a href="#">add/remove attributes from view</a>)</p>
+		
+		<div id="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<th>save:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>verbose view:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>reassign:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>refine query:</th>
+			</tr>
+			<tr>
+			<td><input type="submit" value="query" class="bttn" /></td>
+			<td><input type="submit" value="selected" class="bttn" />&nbsp;<input type="submit" value="all" class="bttn" /></td>
+			<td><input type="submit" value="selected" class="bttn" />&nbsp;<input type="submit" value="all" class="bttn" /></td>
+			<td><input type="submit" value="go" class="bttn" /></td>
+			</tr>
+			</table>
+		</div>
+		
+		<h3>Search Results</h3>
+		
+		<table width="100%" border="1" cellspacing="2" cellpadding="3">
+		<tr>
+		<th nowrap="nowrap"><a href="#"><img src="branding/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="branding/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th><a href="#" title="sort">issue ID #123:</a></th>
+		<th><a href="#" title="sort">issue summary:</a></th>
+		<th><a href="#" title="sort">attribute name:</a></th>
+		<th><a href="#" title="sort">attribute x:</a></th>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td><a href="#"><strong>23</strong></a></td>
+		<td><a href="#">is broken</a></td>
+		<td>busted</td>
+		<td>priority 1</td>
+		</tr>
+		
+		<tr class="b">
+		<td><input type="checkbox" /></td>
+		<td><a href="#"><strong>22</strong></a></td>
+		<td><a href="#">reported fixed</a></td>
+		<td>busted</td>
+		<td>priority 1</td>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td><a href="#"><strong>28</strong></a></td>
+		<td><a href="#">is broken</a></td>
+		<td>busted</td>
+		<td>priority 1</td>
+		</tr>
+		
+		<tr class="b">
+		<td><input type="checkbox" /></td>
+		<td><a href="#"><strong>29</strong></a></td>
+		<td><a href="#">is broken</a></td>
+		<td>busted</td>
+		<td>priority 1</td>
+		</tr>
+		</table>
+				   
+		<div id="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<th>save:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>verbose view:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>reassign:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>refine query:</th>
+			</tr>
+			<tr>
+			<td><input type="submit" value="query" class="bttn" /> </td>
+			<td><input type="submit" value="selected" class="bttn" /> <input type="submit" value="all" class="bttn" /></td>
+			<td><input type="submit" value="selected" class="bttn" /> <input type="submit" value="all" class="bttn" /></td>
+			<td><input type="submit" value="go" class="bttn" /></td>
+			</tr>
+			</table>
+		</div>
+		
+		<p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" class="bttn" /></p>
+		
+		<p>&#171; previous | 1 of 1 | next &#187; (<a href="#">add/remove attributes from view</a>)</p>
+	</div>
+	<!-- Scarab - App -->
+
+<!-- Structural Elements -->
+</td>
+</tr>
+</table>
+<!-- Structural Elements -->
+
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
+
+</form>
+</body>
+</html>
+
+
